в процессе создания страницы приглашения

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,9 @@ staticfiles
 # django media
 media/*
 !media/.gitkeep
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
